{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 38,
  "lineage": "357f3789-d621-5452-a8d7-9d980a4b3ee0",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0cfd9576e9f64be2c",
            "arn": "arn:aws:ec2:us-east-1:101745281903:instance/i-0918f2b247b61eb0a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "terraform-demo-ecs-instance-profile",
            "id": "i-0918f2b247b61eb0a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_demo_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08dd712b25c4fd338"
              }
            ],
            "primary_network_interface_id": "eni-08dd712b25c4fd338",
            "private_dns": "ip-10-0-1-146.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.146",
            "public_ip": "18.209.229.104",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01ed8105b675e2336",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d652d244e361fc7",
            "tags": {
              "Environment": "dev",
              "Name": "terraform-demo-ec2",
              "Owner": "Shubh"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-demo-ec2",
              "Owner": "Shubh"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-059927989a6b6255b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "101745281903",
            "id": "i-0918f2b247b61eb0a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2.aws_key_pair.this",
            "module.ec2.aws_security_group.this",
            "module.ec2.data.aws_ami.ecs_ami",
            "module.ecs.aws_ecs_cluster.this",
            "module.iam.aws_iam_instance_profile.ecs_instance_profile",
            "module.iam.aws_iam_role.ecs_instance_role",
            "module.iam.data.aws_iam_policy_document.ecs_instance_assume_role",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101745281903:security-group/sg-059927989a6b6255b",
            "description": "Allow SSH and app port",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-059927989a6b6255b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "App port",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-demo-sg",
            "name_prefix": "",
            "owner_id": "101745281903",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "terraform-demo-sg",
              "Owner": "Shubh"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "terraform-demo-sg",
              "Owner": "Shubh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0003d2e9e0c3d56c1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "101745281903",
            "id": "sg-059927989a6b6255b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101745281903:internet-gateway/igw-036a901fe6cc4e3c6",
            "id": "igw-036a901fe6cc4e3c6",
            "owner_id": "101745281903",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform-demo-igw"
            },
            "tags_all": {
              "Name": "terraform-demo-igw"
            },
            "vpc_id": "vpc-0003d2e9e0c3d56c1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101745281903:route-table/rtb-0d8d5e71e87810e7a",
            "id": "rtb-0d8d5e71e87810e7a",
            "owner_id": "101745281903",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-036a901fe6cc4e3c6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-demo-public-rt"
            },
            "tags_all": {
              "Name": "terraform-demo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0003d2e9e0c3d56c1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "101745281903",
            "id": "rtb-0d8d5e71e87810e7a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbccbb9786d3a81e",
            "region": "us-east-1",
            "route_table_id": "rtb-0d8d5e71e87810e7a",
            "subnet_id": "subnet-05d652d244e361fc7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101745281903:subnet/subnet-05d652d244e361fc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d652d244e361fc7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "101745281903",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform-demo-public-subnet"
            },
            "tags_all": {
              "Name": "terraform-demo-public-subnet"
            },
            "vpc_id": "vpc-0003d2e9e0c3d56c1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "101745281903",
            "id": "subnet-05d652d244e361fc7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101745281903:vpc/vpc-0003d2e9e0c3d56c1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00c9ffaf1ead69e17",
            "default_route_table_id": "rtb-0e9466d756fe98f1e",
            "default_security_group_id": "sg-088fdbac633bff306",
            "dhcp_options_id": "dopt-0d4bad2a468bd87ea",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0003d2e9e0c3d56c1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e9466d756fe98f1e",
            "owner_id": "101745281903",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform-demo-vpc"
            },
            "tags_all": {
              "Name": "terraform-demo-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "101745281903",
            "id": "vpc-0003d2e9e0c3d56c1",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}